--- a/2950 Phase 5.ipynb
+++ b/2950 Phase 5.ipynb
@@ -1946,7 +1946,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In summary we can conclude that based off the prediction model, we can see that minimum nights affects availability of listing from the given scatterplot with a linear regression line. We can also conclude that minimum nights can be used in order to accurately forecast the availability of a listing from the given prediction percentages. "
+    "In summary we can conclude that based off the prediction model, we can see that minimum nights affects availability of listing from the given scatterplot with a linear regression line. We can also conclude that minimum nights can be used in order to accurately forecast the availability of a listing from the given prediction percentages. For an Airbnb stakeholder, the significance of these findings in this analysis for an Airbnb stakeholder is that it is important when listing a room and the minimum nights of the room. If an Airbnb stakeholder is interested in increasing the net profit of a room, they will want to list rooms with a low number of minimum nights to have a greater chance of the room being booked at a higher rate."
    ]
   },
   {
